debug de createGame
